<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingHorizontal="14dp"
    tools:context=".activity.auth.AuthActivity">

    <TextView
        android:id="@+id/login_title"
        style="@style/Regular.ColorWhite.28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_title"
        app:layout_constraintBottom_toTopOf="@id/email_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/email_title"
        style="@style/Medium.ColorWhite.16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/auth_email"
        app:layout_constraintBottom_toTopOf="@id/input_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_email"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_input_text_auth"
        app:layout_constraintBottom_toTopOf="@+id/password_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_title">

        <EditText
            android:id="@+id/edit_email"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:hint="@string/auth_email_hint"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_title"
        style="@style/Medium.ColorWhite.16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/auth_password"
        app:layout_constraintBottom_toTopOf="@id/input_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_input_text_auth"
        app:layout_constraintBottom_toTopOf="@+id/action_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/password_title">

        <EditText
            android:id="@+id/edit_password"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:hint="@string/auth_password_hint"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/action_login"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_btn_enabled"
        android:text="@string/auth_action_login"
        app:layout_constraintBottom_toTopOf="@+id/caption_not_have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_password" />

    <TextView
        android:id="@+id/caption_not_have_account"
        style="@style/SemiBold.ColorWhite.12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/auth_not_have_account"
        app:layout_constraintBottom_toTopOf="@+id/action_forget_password"
        app:layout_constraintEnd_toStartOf="@+id/action_signup"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_login" />

    <TextView
        android:id="@+id/action_signup"
        style="@style/SemiBold.ColorSecondary.12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/auth_action_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/caption_not_have_account"
        app:layout_constraintTop_toTopOf="@+id/caption_not_have_account" />

    <TextView
        android:id="@+id/action_forget_password"
        style="@style/SemiBold.ColorSecondary.12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:text="@string/auth_action_forget_password"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caption_not_have_account" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="@color/stroke_color"
        app:layout_constraintBottom_toTopOf="@+id/action_ok_social"
        app:layout_constraintTop_toBottomOf="@id/action_forget_password" />


    <ImageButton
        android:id="@+id/action_wk_social"
        android:layout_width="156dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_btn_wk_social"
        android:src="@drawable/ic_social_wk"
        app:layout_constraintEnd_toStartOf="@+id/action_ok_social"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/action_ok_social" />


    <ImageButton
        android:id="@+id/action_ok_social"
        android:layout_width="156dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/bg_btn_ok_social"
        android:src="@drawable/ic_social_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/action_wk_social"
        app:layout_constraintTop_toBottomOf="@+id/line" />

</androidx.constraintlayout.widget.ConstraintLayout>