<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".screens.profile.ProfileScreen">

    <eightbitlab.com.blurview.BlurTarget
        android:id="@+id/blur_target"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/img_profile_background" />
    </eightbitlab.com.blurview.BlurTarget>

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blur_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:blurOverlayColor="@color/button_favorite_background_color">

        <TextView
            android:id="@+id/app_name"
            style="@style/SemiBold.ColorWhite.12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_eye" />

            <TextView
                style="@style/SemiBold.ColorWhite.30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/profile_coming_soon" />

            <TextView
                style="@style/SemiBold.ColorWhite.20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/profile_сaption" />

        </LinearLayout>
    </eightbitlab.com.blurview.BlurView>
</FrameLayout>
