<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".screens.courseDetails.CourseDetailsScreen">


    <eightbitlab.com.blurview.BlurTarget
        android:id="@+id/blur_target"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/course_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/img_course_details" />

    </eightbitlab.com.blurview.BlurTarget>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_course_details_image_gradient"
        app:layout_constraintBottom_toBottomOf="@id/blur_target"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blur_rating"
        android:layout_width="46dp"
        android:layout_height="22dp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_rounded_corner"
        app:blurOverlayColor="@color/course_item_background_overlay_color"
        app:layout_constraintBottom_toBottomOf="@+id/blur_target"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/stars_point"
            style="@style/Regular.ColorWhite.12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_star"
            android:gravity="center"
            android:paddingHorizontal="4dp"
            tools:text="4.9" />

    </eightbitlab.com.blurview.BlurView>

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blur_date"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="6dp"
        android:background="@drawable/bg_rounded_corner"
        app:blurOverlayColor="@color/course_item_background_overlay_color"
        app:layout_constraintBottom_toBottomOf="@+id/blur_rating"
        app:layout_constraintStart_toEndOf="@id/blur_rating">

        <TextView
            android:id="@+id/publish_date"
            style="@style/Regular.ColorWhite.12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            tools:text="12 Мая 2024" />

    </eightbitlab.com.blurview.BlurView>

    <ImageButton
        android:id="@+id/action_back"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_margin="20dp"
        android:background="@drawable/bg_rounded_corner"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/action_favorite"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_rounded_corner"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/action_back" />

    <TextView
        android:id="@+id/course_title"
        style="@style/Regular.ColorWhite.22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="Hello World"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blur_target" />

    <androidx.cardview.widget.CardView
        android:id="@+id/author_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="30dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintStart_toStartOf="@+id/course_title"
        app:layout_constraintTop_toBottomOf="@+id/course_title">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_author" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/author"
        style="@style/Regular.ColorWhite.12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:alpha="0.5"
        android:text="@string/course_details_author"
        app:layout_constraintBottom_toTopOf="@+id/author_name"
        app:layout_constraintStart_toEndOf="@+id/author_image"
        app:layout_constraintTop_toTopOf="@id/author_image"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/author_name"
        style="@style/Medium.ColorWhite.16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_details_author_name"
        app:layout_constraintBottom_toBottomOf="@+id/author_image"
        app:layout_constraintStart_toStartOf="@id/author"
        app:layout_constraintTop_toBottomOf="@id/author" />

    <Button
        android:id="@+id/action_start_course"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_btn_enabled"
        android:text="@string/course_details_start_course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/author_image" />

    <Button
        android:id="@+id/action_platform"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_rounded_corner"
        android:text="@string/course_details_navigate_to_platform"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@id/action_start_course"
        app:layout_constraintStart_toStartOf="@id/action_start_course"
        app:layout_constraintTop_toBottomOf="@id/action_start_course" />

    <TextView
        android:id="@+id/course_information"
        style="@style/Regular.ColorWhite.22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/course_details_course_information"
        app:layout_constraintStart_toStartOf="@id/action_platform"
        app:layout_constraintTop_toBottomOf="@id/action_platform" />

    <TextView
        android:id="@+id/course_captions"
        style="@style/Regular.ColorWhite.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:alpha="0.7"
        app:layout_constraintEnd_toEndOf="@id/action_platform"
        app:layout_constraintStart_toStartOf="@id/action_platform"
        app:layout_constraintTop_toBottomOf="@id/course_information" />
</androidx.constraintlayout.widget.ConstraintLayout>
